Added gunicon to requriments file

--- a/pharmako/static/css/global.css
+++ b/pharmako/static/css/global.css
@@ -3,6 +3,11 @@ body {
   line-height: normal;
 }
 
+.logo{
+  height: 60px;
+  width: 60px;
+}
+
 :root {
   /* fonts */
   --font-open-sans: "Open Sans";
