--- a/pharmako/templates/nav-footer.html
+++ b/pharmako/templates/nav-footer.html
@@ -13,8 +13,10 @@
       </head>
       <body>
         <header class="top-bar">
+          <img class="logo" src="{{url_for('static', filename='/public/logo.png')}}"/>
             <h2 class="title">Pharmacovigilance Reporting Platform</h2>
             <div class="navigation" id="navbarLinks">
+              
               <a class="tab" id="tabText"><span class="tab-home">Home</span></a>
               <a class="tab1" id="tabText1"><span class="tab-report">Report Drug Effect</span></a>
               <a class="blog-tab" id="blogTabText"><span class="tab-blog">Blog</span></a>
