--- a/pharmako/templates/landing-page.html
+++ b/pharmako/templates/landing-page.html
@@ -20,15 +20,15 @@
         </div>
         <button class="button" id="button">
           <div class="primary">
-            <a href="signup.html"><div class="title2">Report Now</div></a>
+            <a href="signup"><div class="title2">Report Now</div></a>
           </div>
         </button>
         <div class="tab-group">
           <div class="tab4">
-            <a href="signup.html"><div class="title3">ADR Reporting</div></a>
+            <a href="signup"><div class="title3">ADR Reporting</div></a>
           </div>
           <div class="tab5">
-            <a href="signup.html"
+            <a href="signup"
               ><div class="title4">Medication Error Reporting</div></a
             >
           </div>
