--- a/pharmako/templates/about-us.html
+++ b/pharmako/templates/about-us.html
@@ -45,7 +45,7 @@
       <div class="details-wrapper">
         <div class="focus-icon-parent">
           <div class="focus-icon">
-            <img class="critical-thinking-icon" loading="lazy" alt="" src="./public/critical-thinking@2x.png" />
+            <img class="critical-thinking-icon" loading="lazy" alt="" src="{{url_for('static', filename='public/critical-thinking@2x.png')}}" />
           </div>
           <div class="problem-this-project-container">
             <p class="problem-this-project">
@@ -70,7 +70,7 @@
         </div>
         <div class="audience-icon-parent">
           <div class="audience-icon">
-            <img class="add-icon" loading="lazy" alt="" src="./public/add@2x.png" />
+            <img class="add-icon" loading="lazy" alt="" src="{{url_for('static', filename='public/add@2x.png')}}" />
           </div>
           <div class="who-the-portfolio-container">
             <p class="who-the-portfolio-project-will">
@@ -114,7 +114,7 @@
       </div>
       <div class="limitations-icon-parent">
         <div class="limitations-icon">
-          <img class="cancel-icon" loading="lazy" alt="" src="./public/cancel@2x.png" />
+          <img class="cancel-icon" loading="lazy" alt="" src="{{url_for('static', filename='public/cancel@2x.png')}}" />
         </div>
         <div class="problem-this-project-container1">
           <p class="problem-this-project-will-not">
@@ -155,7 +155,7 @@
     </div>
   </section>
 </main>
-<img class="about-us-child" loading="lazy" alt="" src="./public/rectangle-4139@2x.png" />
+<img class="about-us-child" loading="lazy" alt="" src="{{url_for('static', filename='public/rectangle-4139@2x.png')}}" />
 </div>
 
 <script>
