--- a/pharmako/templates/signup.html
+++ b/pharmako/templates/signup.html
@@ -11,7 +11,7 @@
 <body>
     <div class="signup-container">
         <h2>Signup</h2>
-        <form action="{{ url_for('signup') }}" method="POST">
+        <form action="{{ url_for('login') }}" method="POST">
             <div class="msg">{{ msg }}</div>
 
             <label for="username"> Choose Username</label>
@@ -37,6 +37,7 @@
 
             <button class="signup-button" type="submit">Sign Up</button>
         </form>
+        <p>Already have an account? <a href="{{ url_for('login') }}">Login</a></p>
     </div>
 </body>
 
