made all the signup and login clean

--- a/pharmako/templates/nav-footer.html
+++ b/pharmako/templates/nav-footer.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="{{url_for('static', filename='css/blog-page.css')}}" />
         <link rel="stylesheet" href="{{url_for('static', filename='css/messages.css')}}" />
         <link rel="stylesheet" href="{{url_for('static', filename='css/product-view.css')}}" />
-        <link rel="stylesheet" href="{{url_for('static', filename='css/reach-view.css')}}" />
+        <link rel="stylesheet" href="{{url_for('static', filename='css/reach-us.css')}}" />
         <link rel="stylesheet" href="{{url_for('static', filename='css/about-us.css')}}" />
         <link
           rel="stylesheet"
