--- a/pharmako/templates/signup.html
+++ b/pharmako/templates/signup.html
@@ -11,7 +11,7 @@
 <body>
     <div class="signup-container">
         <h2>Signup</h2>
-        <form action="{{ url_for('login') }}" method="POST">
+        <form action="{{ url_for('signup') }}" method="POST">
             <div class="msg">{{ msg }}</div>
 
             <label for="username"> Choose Username</label>
